refactor: 인덴트 줄이기 및 메서드 분리